[package]
name = "multiversx-chain-vm"
version = "0.14.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM implementation and tooling"
keywords = ["multiversx", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[features]
# not supported when compiling to wasm
wasm-incompatible = ["rand"]
wasmer-prod = ["multiversx-chain-vm-executor-wasmer"]
wasmer-experimental = ["multiversx-chain-vm-executor-wasmer-experimental"]
default = ["wasmer-prod", "wasmer-experimental"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
sha3 = "0.10.6"
itertools = "0.14.0"
hex-literal = "=0.4.1"
bitflags = "=2.9.0"
colored = "3.0"
rand = { version = "0.8.5", optional = true }
rand_seeder = "0.3.0"
ed25519-dalek = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
anyhow = "1.0"

[dependencies.multiversx-chain-core]
version = "=0.14.0"
path = "../core"

[dependencies.multiversx-chain-vm-executor]
version = "0.3.0"
git = "https://github.com/multiversx/mx-vm-executor-rs"
rev = "795a8d587a799454e6e07d660d6499a05eaa90a1"
# path = "/Users/andreim/multiversx/vm/mx-vm-executor-rs/vm-executor"

[dependencies.multiversx-chain-vm-executor-wasmer]
version = "0.3.0"
optional = true
git = "https://github.com/multiversx/mx-vm-executor-rs"
rev = "795a8d587a799454e6e07d660d6499a05eaa90a1"
# path = "/Users/andreim/multiversx/vm/mx-vm-executor-rs/vm-executor-wasmer"

[dependencies.multiversx-chain-vm-executor-wasmer-experimental]
version = "0.3.0"
optional = true
git = "https://github.com/multiversx/mx-vm-executor-rs"
rev = "795a8d587a799454e6e07d660d6499a05eaa90a1"
# path = "/Users/andreim/multiversx/vm/mx-vm-executor-rs/vm-executor-experimental"
