[package]
name = "multiversx-chain-vm"
version = "0.21.1"
edition = "2024"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM implementation and tooling"
keywords = ["multiversx", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[features]
# not supported when compiling to wasm
bls = ["multiversx-bls"]
wasm-incompatible = ["rand"]
wasmer-experimental = ["multiversx-chain-vm-executor-wasmer-experimental"]
# default = ["wasmer-experimental"] ## uncomment for easier development

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
sha3 = "0.10.6"
itertools = "0.14.0"
hex-literal = "1.0"
bitflags = "2.9"
colored = "3.0"
rand = { version = "0.9", optional = true }
rand_seeder = "0.4.0"
ed25519-dalek = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
multiversx-bls = { version = "0.2.0", optional = true }
log = "0.4.17"

[dependencies.multiversx-chain-core]
version = "=0.21.1"
path = "../core"
features = ["std"]

[dependencies.multiversx-chain-vm-executor]
version = "=0.5.1"

[dependencies.multiversx-chain-vm-executor-wasmer-experimental]
version = "=0.5.1"
optional = true
