[package]
name = "multiversx-chain-vm-wasmer-prod"
version = "0.0.0"
edition = "2024"
publish = false

description = "MultiversX VM adapter for the Wasmer Production executor"

[lib]
path = "src/wasmer_prod.rs"

[dependencies]
home = "=0.5.1" # downgrading, >= 0.5.2 requires rustc 1.88, which is causing linker problems on Linux

[dependencies.multiversx-chain-core]
version = "=0.21.1"
path = "../core"


[dependencies.multiversx-chain-vm]
version = "=0.21.1"
path = "../vm"

[dependencies.multiversx-chain-vm-executor]
version = "=0.5.1"

[dependencies.multiversx-chain-vm-executor-wasmer]
version = "=0.5.1"
default-features = false
features = ["multiversx-chain-vm-executor-published"]
git = "https://github.com/multiversx/mx-vm-executor-rs"
rev = "5f5671d918c8cbcf62d5134eb33762e677aea709"

[workspace]
members = ["."]