[package]
name = "multiversx-chain-vm-wasmer-prod"
version = "0.0.0"
edition = "2024"
publish = false

description = "MultiversX VM adapter for the Wasmer Production executor"

[lib]
path = "src/wasmer_prod.rs"

[dependencies]
home = "=0.5.1" # downgrading, >= 0.5.2 requires rustc 1.88, which is causing linker problems on Linux

[dependencies.multiversx-chain-core]
version = "=0.21.1"
path = "../core"


[dependencies.multiversx-chain-vm]
version = "=0.21.1"
path = "../vm"

[dependencies.multiversx-chain-vm-executor]
version = "=0.5.1"

[dependencies.multiversx-chain-vm-executor-wasmer]
version = "=0.5.1"
default-features = false
git = "https://github.com/multiversx/mx-vm-executor-rs"
rev = "a5bc70f36589fee26cd75e70f7a1785a9d63c8f2"

[workspace]
members = ["."]