[package]
name = "multiversx-sc-modules"
version = "0.39.5"
edition = "2021"

authors = ["MultiversX <contact@multiversx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "Elrond WebAssembly standard smart contract modules"
keywords = ["multiversx", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[features]
alloc = ["multiversx-sc/alloc"]

[dependencies.multiversx-sc]
version = "0.39.5"
path = "../../framework/base"
