[package]
name = "multiversx-sc-abi-derive-common"
version = "0.24.0"
edition = "2024"
publish = false

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX ABI common functionality for derive macros"
keywords = ["multiversx", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools",
]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
