[package]
name = "multiversx-sc-abi-derive"
version = "0.24.0"
edition = "2024"
publish = false

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX ABI derive macros - TypeAbi derive and type_abi attribute"
keywords = ["multiversx", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools",
]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "multiversx_sc_abi_derive"
proc-macro = true
