[package]
name = "multiversx-sc-abi"
version = "0.24.0"
edition = "2024"
publish = false # TEMP

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "Lightweight binary serializer/deserializer, written especially for MultiversX smart contracts"
keywords = ["multiversx", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools",
]

[dependencies.multiversx-chain-core]
version = "=0.21.1"
path = "../../chain/core"

[dependencies.multiversx-sc-codec]
path = "../codec"
version = "0.24.0"

[dependencies]
num-bigint = { version = "0.4", optional = true }           # can only be used in std contexts
unwrap-infallible = "1.0"
bitflags = "2.9"

# [dev-dependencies.multiversx-sc-codec-derive]
# path = "../codec-derive"
# version = "=0.24.0"
