[package]
name = "multiversx-sc-codec-human-readable"
version = "0.1.0"
edition = "2018"
publish = false

authors = ["MultiversX <contact@multiversx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "Conversions from a human readable format to the multiversx-sc-codec"
keywords = ["multiversx", "wasm", "webassembly", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde_json = { version = "1.0.68" }
bech32 = "0.9"

[dependencies.multiversx-sc-scenario]
version = "=0.44.0"
path = "../../framework/scenario"

[dependencies.multiversx-sc-meta]
version = "=0.44.0"
path = "../../framework/meta"
