[package]
name = "elrond-codec-derive"
version = "0.1.0"
authors = ["dorin.iancu <dorin.iancu@elrond.com>"]
edition = "2018"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
hex = "0.4"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "elrond_codec_derive"
proc-macro = true
