[package]
name = "crypto-bubbles"
version = "0.0.1"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies]
elrond-wasm = { version = "0.6.2", path = "../../elrond-wasm" }
elrond-wasm-derive = { version = "0.6.2", path = "../../elrond-wasm-derive" }
elrond-wasm-node = { version = "0.6.2", path = "../../elrond-wasm-node", optional = true }

[dev-dependencies]
elrond-wasm-debug = { version = "0.6.2", path = "../../elrond-wasm-debug" }
