[package]
name = "factorial"
version = "0.1.4"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
elrond-wasm = { version = "0.5.5", path = "../../elrond-wasm" }
elrond-wasm-derive = { version = "0.5.5", path = "../../elrond-wasm-derive" }
elrond-wasm-node = { version = "0.5.5", path = "../../elrond-wasm-node"}
elrond-wasm-debug = { version = "0.5.5", path = "../../elrond-wasm-debug" }
