[package]
name = "lottery-erc20"
version = "0.0.1"
authors = [ "you",]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.9.6"
path = "../../elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.9.6"
path = "../../elrond-wasm-derive"

[dependencies.elrond-wasm-node]
version = "0.9.6"
path = "../../elrond-wasm-node"
optional = true

[dependencies.simple-erc20]
path = "../simple-erc20"

[dev-dependencies.elrond-wasm-debug]
version = "0.9.6"
path = "../../elrond-wasm-debug"
