[package]
name = "multiversx-sc"
version = "0.65.0"
edition = "2024"
rust-version = "1.85"

authors = ["Andrei Marinica <andrei.marinica@multiversx.com>", "MultiversX <contact@multiversx.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX smart contract API"
keywords = ["multiversx", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[features]
num-bigint = ["multiversx-sc-codec/num-bigint"]
alloc = []
std = ["multiversx-chain-core/std"]
managed-buffer-builder-cached = []
esdt-token-payment-legacy-decode = []
contract-call-legacy = []
small-int-bug = [] # can be used for testing the buggy mBufferFromSmallIntSigned VM hook

[dependencies]
bitflags = "2.9"
num-traits = { version = "0.2", default-features = false }
unwrap-infallible = "1.0"
generic-array = "1.2"

[dependencies.multiversx-sc-derive]
version = "=0.65.0"
path = "../derive"

[dependencies.multiversx-sc-codec]
version = "=0.25.0"
path = "../../data/codec"
features = ["derive"]

[dependencies.multiversx-chain-core]
version = "=0.22.0"
path = "../../chain/core"
